# flagger

./: LICENSE  README.md  pyproject.toml  test.json
flagger/: __main__.py
flagger/backends/: __init__.py  ctfd.py  ctfx.py  zeroctf.py
flagger/sniffers/: __init__.py  duckduckgo.py  github.py
